# mapgen

./: .clang-format  .clang-tidy  .gitignore  README.md  graphic.cpp  graphic.h  mapgen.cpp  meson.build
assets/: mapgen.pxo
assets/image/: image.json  image.yaml  mapgen.pxo
assets/script/: format.sh  yaml2json.py
develop/: valgrind.cfg
develop/better line/: research_about_balance_point_line.ipynb
develop/saw/: saw.ipynb
include/: data.h  font.h  graphic.h  old_graphic.h  program.h  utils.h  view.h  widget.h
src/: data.cpp  graphic.cpp  mapgen.cpp  old_graphic.cpp  old_mapgen.cpp  program.cpp  view.cpp  widget.cpp
